updated the doc and style 404 page

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
       href="https://fonts.googleapis.com/css?family=Roboto&amp;display=swap"
       rel="stylesheet"
     />
-    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="assets/icons/favicon.png" />
     <link rel="manifest" href="manifest.webmanifest" />
     <meta name="theme-color" content="#1976d2" />
   </head>
