Add new font and pwa functionalitues and icons

--- a/src/index.html
+++ b/src/index.html
@@ -9,9 +9,9 @@
       href="https://fonts.googleapis.com/css?family=Roboto&amp;display=swap"
       rel="stylesheet"
     />
-    <link rel="icon" type="image/x-icon" href="assets/icons/favicon.png" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <link rel="manifest" href="manifest.webmanifest" />
-    <meta name="theme-color" content="#1976d2" />
+    <meta name="theme-color" content="#282828" />
   </head>
   <body>
     <app-root></app-root>
